tesil/doc/tesil-grammar.bnf

expression:     equality

equality:       comparison ( ('==' | '!=') comparison )*

comparison:     term ( ('>' | '<' | '>=' | '<=' ) term )*

term:           factor ( ('-' | '+') factor )*

factor:         unary ( ('/' | '*') unary )*

unary:          ('!' | '~' | '-')? unary
            |   primary

primary:        INTEGER
            |   FLOAT
            |   'true'
            |   'false'
            |   STRING
            |   CHAR
            |   '(' expression ')';
